--- a/src/css/main.css
+++ b/src/css/main.css
@@ -4,6 +4,8 @@
 
 #dialog_screen {
     display: none;
+    height: 100%;
+    width: 100%;
 }
 
 .container {
@@ -25,7 +27,7 @@ html, body {
 
 div.navbar.navbar-fixed-bottom {
     min-height: 40px;
-    background-color: rgba(94, 94, 94,0.5);
+    background-color: rgba(94, 94, 94, 0.5);
 }
 
 #reset {
@@ -42,4 +44,52 @@ div.navbar.navbar-fixed-bottom {
 
 .reset-btn {
     float: right;
+}
+
+@keyframes example {
+    from {
+        /*opacity: 1.0;*/
+        transform: scale(1.0, 1.0);
+    }
+    to {
+        /*opacity: 0.8;*/
+        transform: scale(0.8, 0.8);
+    }
+}
+
+/* The element to apply the animation to */
+.game-over {
+    /*opacity: 0.8;*/
+    transform: scale(0.8, 0.8);
+    animation-name: example;
+    animation-duration: 2s;
+}
+
+#game {
+    z-index: 2;
+}
+
+#dialog_screen {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 3;
+    background-color: rgba(255, 255, 255, 0.7);
+}
+
+.game-over-text {
+    margin-top: 7em;
+    text-align: center;
+    color: brown;
+    font-weight: bold;
+}
+
+#next {
+    display: none;
+}
+
+.btn-restart {
+    margin-top: 3em;
 }
