Add cost yield for each job

--- a/css/main.css
+++ b/css/main.css
@@ -99,10 +99,12 @@ th {
 
 .yield {
     color: green;
+    text-transform: capitalize;
 }
 
 .upkeep {
     color: red;
+    text-transform: capitalize;
 }
 
 .season-header {
